docs/0.2.0/_sources/generated/skbio.sequence.RNASequence.txt
skbio.sequence.RNASequence
==========================

.. currentmodule:: skbio.sequence

.. autoclass:: RNASequence

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         RNASequence.__contains__
         RNASequence.__eq__
         RNASequence.__format__
         RNASequence.__getitem__
         RNASequence.__hash__
         RNASequence.__init__
         RNASequence.__iter__
         RNASequence.__len__
         RNASequence.__ne__
         RNASequence.__new__
         RNASequence.__reduce__
         RNASequence.__reduce_ex__
         RNASequence.__repr__
         RNASequence.__reversed__
         RNASequence.__sizeof__
         RNASequence.__str__
         RNASequence.__subclasshook__
         RNASequence._complement
         RNASequence.alphabet
         RNASequence.complement
         RNASequence.complement_map
         RNASequence.count
         RNASequence.degap
         RNASequence.distance
         RNASequence.fraction_diff
         RNASequence.fraction_same
         RNASequence.gap_alphabet
         RNASequence.gap_maps
         RNASequence.gap_vector
         RNASequence.has_unsupported_characters
         RNASequence.index
         RNASequence.is_gap
         RNASequence.is_gapped
         RNASequence.is_reverse_complement
         RNASequence.is_valid
         RNASequence.iupac_characters
         RNASequence.iupac_degeneracies
         RNASequence.iupac_degenerate_characters
         RNASequence.iupac_standard_characters
         RNASequence.k_word_counts
         RNASequence.k_word_frequencies
         RNASequence.k_words
         RNASequence.lower
         RNASequence.nondegenerates
         RNASequence.rc
         RNASequence.reverse_complement
         RNASequence.to_fasta
         RNASequence.unsupported_characters
         RNASequence.upper



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         RNASequence.description
         RNASequence.id

